# ephemeris_fitting

./: .gitignore  CMakeLists.txt  plot_error.py  readme.md
data/: brdc2740.22n  igs22296.sp3
src/: constants.h  gnsstime.cc  gnsstime.h  main.cc  satellite.cc  satellite.h  sp3.cc  sp3.h  utils.h
test/: test_gnsstime.cc
